<resources>
    <string name="app_name">Mycalculator</string>
    <string name="clear_all">AC</string>
    <string name="divider">÷</string>
    <string name="multiplier">X</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="substruct">-</string>
    <string name="number_0">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="decimel_point">.</string>
    <string name="delete">DEL</string>
</resources>
