<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layoutDirection="ltr"

    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="15dp"
        android:textSize="50sp"
        android:textDirection="ltr"
        android:gravity="fill_horizontal"
        android:id="@+id/tview"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:layoutDirection="ltr">

        <Button
            android:layout_width="184dp"
            android:layout_height="match_parent"
            android:text="@string/clear_all"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/clear"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/delete"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/delete"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/divider"
            android:textSize="45sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/divider"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:layoutDirection="ltr">
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/number_7"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/seven"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/number_8"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/eight"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/number_9"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/nine"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/multiplier"
            android:textSize="35sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/multy"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:layoutDirection="ltr">
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/number_4"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/four"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/number_5"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/five"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/number_6"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/six"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/substruct"
            android:textSize="50sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/substruct"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:layoutDirection="ltr">
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/number_1"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/one"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/number_2"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/two"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/number_3"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/three"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textSize="50sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/adding"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:layoutDirection="ltr">
        <Button
            android:layout_width="184dp"
            android:layout_height="match_parent"
            android:text="@string/number_0"
            android:textSize="50sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/zero"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/decimel_point"
            android:textSize="70sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/decimel"/>
        <Button
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:text="@string/equal"
            android:textSize="50sp"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/result"/>
    </LinearLayout>


</LinearLayout>